# FramworkCpp

./: .env  .gitignore  CMakeLists.txt  Makefile  README.md  app.cpp  cert.pem  compile.sh  main.cpp  prueba.py  users.hpp
.github/workflows/: cmake-single-platform.yml
files/: files.txt
secrets/: key.pem  users.db
src/: CMakeLists.txt  args.h  complementServerFunctions.cpp  complementServerTools.cpp  curl.h  handleRequest.cpp  htmlLoader.h  httpMethods.cpp  httpMethods.h  httpProto.cpp  httpProto.h  idGenerator.h  request.h  response.cpp  response.h  server.cpp  server.h  session.h  tabledb.cpp  templating.cpp  templating.h  url_encoding.h  usersdb.cpp  usersdb.h
src/jinjaTemplating/: errors.h  jinjaFunctions.h  templating.cpp  templating.h  tinyexpr.cpp  tinyexpr.h  tools.h  types.h
src/tools/: hash.h  idGenerator.h  logging.h  url_encoding.h
templates/: api_data.html  block.html  home.html  home_logged.html  index.html  login.html  main.css  main.js  post.html  user.html
tests/: CMakeLists.txt  headersTest.cpp  jinjaTest.cpp  jinjaToolsTest.cpp  toolsTest.cpp
